# path-tracer

./: CMakeLists.txt  README.md  run.sh
src/: main.cpp
src/scene/: scene.cpp  scene.h
src/shaders/: fullscreen.vs  pathtrace.fs
src/utils/: utils.h
